[gd_scene load_steps=7 format=2]

[ext_resource path="res://Control.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://DB.tscn" type="PackedScene" id=3]
[ext_resource path="res://HowToPlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/Cabin-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 34
font_data = ExtResource( 5 )

[node name="DragAndDropDemo" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
script = ExtResource( 2 )

[node name="AmbientMusic" type="AudioStreamPlayer2D" parent="."]

[node name="DB" parent="." instance=ExtResource( 3 )]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1093.0
margin_bottom = 593.0
rect_min_size = Vector2( 1050, 0 )
color = Color( 0.364706, 0.6, 0.341176, 1 )

[node name="Control" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1093.0
margin_bottom = 593.0

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1093.0
margin_bottom = 593.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 463.0
margin_top = 255.0
margin_right = 623.0
margin_bottom = 331.0
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "ALIGN LAB"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 160.0
margin_bottom = 76.0
alignment = 1

[node name="HowToPlayButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 3.0
margin_right = 103.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
text = "HowToPlay"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 107.0
margin_right = 157.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 30 )
text = "Start"

[node name="HowToPlay" parent="." instance=ExtResource( 4 )]

[connection signal="finished" from="AmbientMusic" to="." method="_on_SongFinished"]
[connection signal="show_score" from="Control" to="." method="_on_Control_show_score"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/HowToPlayButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="ClosePressed" from="HowToPlay" to="." method="_on_HowToPlay_ClosePressed"]
